; ModuleID = '/home/carl/AnghaBench/timescaledb/src/chunk_append/extr_planner.c_adjust_childscan.c'
source_filename = "/home/carl/AnghaBench/timescaledb/src/chunk_append/extr_planner.c_adjust_childscan.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_11__ = type { i32* }
%struct.TYPE_12__ = type { i32, %struct.TYPE_10__* }
%struct.TYPE_10__ = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.TYPE_11__* (i32*, %struct.TYPE_11__*, %struct.TYPE_12__*, i32*, i32*, i32*)* @adjust_childscan to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.TYPE_11__* @adjust_childscan(i32* %0, %struct.TYPE_11__* %1, %struct.TYPE_12__* %2, i32* %3, i32* %4, i32* %5) #0 {
  %7 = alloca i32*, align 8
  %8 = alloca %struct.TYPE_11__*, align 8
  %9 = alloca %struct.TYPE_12__*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i32*, align 8
  %12 = alloca i32*, align 8
  %13 = alloca i32*, align 8
  %14 = alloca i32, align 4
  %15 = alloca i32*, align 8
  %16 = alloca i32*, align 8
  %17 = alloca i32*, align 8
  %18 = alloca i32*, align 8
  store i32* %0, i32** %7, align 8
  store %struct.TYPE_11__* %1, %struct.TYPE_11__** %8, align 8
  store %struct.TYPE_12__* %2, %struct.TYPE_12__** %9, align 8
  store i32* %3, i32** %10, align 8
  store i32* %4, i32** %11, align 8
  store i32* %5, i32** %12, align 8
  %19 = load i32*, i32** %7, align 8
  %20 = load %struct.TYPE_12__*, %struct.TYPE_12__** %9, align 8
  %21 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %20, i32 0, i32 1
  %22 = load %struct.TYPE_10__*, %struct.TYPE_10__** %21, align 8
  %23 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %22, i32 0, i32 1
  %24 = load i32, i32* %23, align 4
  %25 = call i32* @ts_get_appendrelinfo(i32* %19, i32 %24, i32 0)
  store i32* %25, i32** %13, align 8
  %26 = load i32*, i32** %7, align 8
  %27 = load i32*, i32** %11, align 8
  %28 = load i32*, i32** %13, align 8
  %29 = call i64 @adjust_appendrel_attrs_compat(i32* %26, i32* %27, i32* %28)
  %30 = inttoptr i64 %29 to i32*
  %31 = load %struct.TYPE_11__*, %struct.TYPE_11__** %8, align 8
  %32 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %31, i32 0, i32 0
  store i32* %30, i32** %32, align 8
  %33 = load %struct.TYPE_11__*, %struct.TYPE_11__** %8, align 8
  %34 = load i32*, i32** %10, align 8
  %35 = load %struct.TYPE_12__*, %struct.TYPE_12__** %9, align 8
  %36 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %35, i32 0, i32 1
  %37 = load %struct.TYPE_10__*, %struct.TYPE_10__** %36, align 8
  %38 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %37, i32 0, i32 0
  %39 = load i32, i32* %38, align 4
  %40 = load i32*, i32** %12, align 8
  %41 = call %struct.TYPE_11__* @ts_prepare_sort_from_pathkeys(%struct.TYPE_11__* %33, i32* %34, i32 %39, i32* %40, i32 1, i32* %14, i32** %18, i32** %15, i32** %16, i32** %17)
  store %struct.TYPE_11__* %41, %struct.TYPE_11__** %8, align 8
  %42 = load i32*, i32** %10, align 8
  %43 = load %struct.TYPE_12__*, %struct.TYPE_12__** %9, align 8
  %44 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %43, i32 0, i32 0
  %45 = load i32, i32* %44, align 8
  %46 = call i32 @pathkeys_contained_in(i32* %42, i32 %45)
  %47 = icmp ne i32 %46, 0
  br i1 %47, label %57, label %48

48:                                               ; preds = %6
  %49 = load %struct.TYPE_11__*, %struct.TYPE_11__** %8, align 8
  %50 = load i32, i32* %14, align 4
  %51 = load i32*, i32** %18, align 8
  %52 = load i32*, i32** %15, align 8
  %53 = load i32*, i32** %16, align 8
  %54 = load i32*, i32** %17, align 8
  %55 = call i64 @make_sort(%struct.TYPE_11__* %49, i32 %50, i32* %51, i32* %52, i32* %53, i32* %54)
  %56 = inttoptr i64 %55 to %struct.TYPE_11__*
  store %struct.TYPE_11__* %56, %struct.TYPE_11__** %8, align 8
  br label %57

57:                                               ; preds = %48, %6
  %58 = load %struct.TYPE_11__*, %struct.TYPE_11__** %8, align 8
  ret %struct.TYPE_11__* %58
}

declare dso_local i32* @ts_get_appendrelinfo(i32*, i32, i32) #1

declare dso_local i64 @adjust_appendrel_attrs_compat(i32*, i32*, i32*) #1

declare dso_local %struct.TYPE_11__* @ts_prepare_sort_from_pathkeys(%struct.TYPE_11__*, i32*, i32, i32*, i32, i32*, i32**, i32**, i32**, i32**) #1

declare dso_local i32 @pathkeys_contained_in(i32*, i32) #1

declare dso_local i64 @make_sort(%struct.TYPE_11__*, i32, i32*, i32*, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
